--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   "homepage": "https://github.com/bkleung89/todo-list#readme",
   "dependencies": {
     "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "mongoose": "^4.13.1"
   }
 }
